--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                     </li>
                     <li>
-                        <img src="./images/project__arena (1).png" alt="">
+                        <img src="./images/project__arena (1).png" alt="arena">
                     </li>
                     <li>
                         <img src="./images/project__arena (1).png" alt="">
